# baseline-codebase

./: .gitignore  .hgignore  .stignore  Dockerfile  Makefile  Makefile.baseline  Makefile.local  Makefile.src  Makefile.template  README.baseline.rst  bitbucket-pipelines.yml  bootstrap  bootstrap.local  concourse-dist.yml  concourse-doc.yml  concourse-test.yml  concourse.yml  dev_requirements.txt  docker-compose.yml  kube.yml  pip.conf  requirements.txt
default/: .env  (+4 more)
src/rex.asynctask/: .gitignore  .hgignore  .hgtags  .prospector.yaml  Makefile  NEWS.rst  README.rst  pyproject.toml  setup.cfg  setup.py
src/rex.asynctask/demo/: setup.py
src/rex.asynctask/demo/src/rex/: asynctask_demo.py
src/rex.asynctask/demo/static/: settings.yaml
src/rex.asynctask/doc/: conf.py  index.rst  reference.rst
src/rex.asynctask/src/rex/asynctask/: __init__.py  core.py  ctl.py  ctl_worker.py  initializer.py  settings.py  worker.py
src/rex.asynctask/src/rex/asynctask/transports/: __init__.py  amqp.py  base.py  filesys.py  localmem.py  pgsql.py  redis.py
src/rex.asynctask/static/: settings.yaml
src/rex.asynctask/test/: index.rst  input.yaml  output.yaml  test_core.rst  test_ctl.rst  test_filesys.rst  test_localmem.rst  test_pgsql.rst  test_redis.rst  test_settings.rst
src/rex.asynctask/test/amqp/: test_amqp.rst
src/rex.asynctask/test/redis/: test_redis.rst
src/rex.storage/: .hgignore  LICENSE.rst  README.rst  pyproject.toml  pytest.ini  setup.cfg  setup.py
src/rex.storage/doc/: conf.py  index.rst  reference.rst
src/rex.storage/src/rex/: __init__.py
src/rex.storage/src/rex/storage/: __init__.py  cloudstorage_gcs_patch.py  cloudstorage_local_patch.py  ctl.py  driver.py  errors.py  rex.py  settings.py  storage.py  util.py
src/rex.storage/test/: input.yaml  output.yaml  test_core.py  test_ctl.py  test_local_driver.py  test_rex_driver.py  test_settings.py  test_storage.py  util.py
src/rex.storage/test/pkg/: setup.py
src/rex.storage/test/pkg/src/rex/: __init__.py
src/rex.storage/test/pkg/static/: settings.yaml
src/rex.storage/test/snapshots/: snap_test_ctl.py  snap_test_settings.py
(+5924 files in other folders)
