[build-system]
requires = [
    'setuptools',
    'wheel',
]

[tool.tidypy]
2to3 = {use = false}
pydocstyle = {use = false}
vulture = {use = false}
manifest = {use = false}
pyroma = {use = false}
exclude = [
    '^demo/.*',
    '^test/.*',
    '^build/.*',
    '^dist/.*',
    '^.pytest_cache/.*',
    '.*/cloudstorage_local_patch.py$',
]

[tool.tidypy.pycodestyle]
disabled = [
    'W391',
    'W503',
]

[tool.tidypy.pylint]
disabled = [
    'wildcard-import',
    'missing-docstring',
    'trailing-newlines',
    'relative-import',  # pylint is confused by namespaces
]
[tool.tidypy.pylint.options]
min-public-methods = 0
max-args = 7

[tool.tidypy.yamllint]
disabled = [
    'document-start',
    'empty-lines',
]

[tool.tidypy.rstlint.options]
sphinx-extensions = [
    'sphinx.ext.autodoc',
    'sphinxcontrib.autorex',
]
ignore-roles = [
    'ref',
]

[tool.tidypy.pyflakes]
disabled = [
    'ImportStarUsed',
    'UnusedImport',
]

[tool.tidypy.bandit]
disabled = [
    'B101',
]

